fix #400 only show scrollbar when mouseover (#401)

--- a/src/client/css/includes/xterm-overwrite.styl
+++ b/src/client/css/includes/xterm-overwrite.styl
@@ -2,11 +2,22 @@
   .xterm-viewport
     &::-webkit-scrollbar
       width 1em
-      background #000
+      background rgba(0,0,0,0)
 
     &::-webkit-scrollbar-track
-      -webkit-box-shadow inset 0 0 6px rgba(0,0,0,0.6)
+      -webkit-box-shadow none
 
     &::-webkit-scrollbar-thumb
-      background-color #555
-      outline 1px solid #555
+      background-color rgba(0,0,0,0)
+      outline none
+  &:hover
+    .xterm-viewport
+      &::-webkit-scrollbar
+        background #000
+
+      &::-webkit-scrollbar-track
+        -webkit-box-shadow inset 0 0 6px rgba(0,0,0,0.6)
+
+      &::-webkit-scrollbar-thumb
+        background-color #555
+        outline 1px solid #555
